--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  margin-bottom: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.rangeInput__wrapper {
+  transition: 0.3s all;
+  padding: 15px;
+  font-family: Inter;
+  position: relative;
+  background: #f1f1f1;
+  max-width: 372px;
+  height: 72px;
+  border-radius: 8px;
+  border: 1px solid transparent;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.rangeInput__slider {
+  bottom: 11px;
 }
 
-.App-link {
-  color: #61dafb;
+.rangeInput__title {
+  font-weight: 500;
+  color: #7a7a7a;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rangeInput__title__currency {
+  font-weight: 600;
 }
+
+.rangeInput__value__wrapper span {
+  color: #2b2b2b;
+  font-size: 18px;
+}
+
+.rangeInput__value__item + .rangeInput__value__item {
+  margin-left: 5px;
+}
+
+.rangeInput__slider .ant-slider-track {
+  background: #4db663 !important;
+  height: 3px;
+}
+
+.rangeInput__slider .ant-slider-rail {
+  height: 3px;
+  background-color: transparent !important;
+}
+
+.rangeInput__slider .ant-slider-handle {
+  top: 3px;
+  width: 15px;
+  height: 15px;
+  background: #4db663;
+  box-shadow: none !important;
+  border: none !important;
+}
+
+.rangeInput__wrapper:hover {
+  border: 1px solid #BCBEC0;
+}
+
+.rangeInput__wrapper.error {
+  background: transparent;
+  border: 1px solid #F44F5A;
+  box-shadow: 0px 0px 5px rgba(244, 79, 90, 0.56);
+}
+
+.rangeInput__wrapper.disabled {
+  border: none;
+}
+
+.rangeInput__wrapper.disabled .rangeInput__value__wrapper span {
+  color: #7a7a7a;
+}
+
+.rangeInput__wrapper.disabled .rangeInput__slider {
+  display: none;
+} 
